  on TCP client connection attempts (doesn't work on all
  OSes).  This patch also makes OpenVPN signalable during
  TCP connection attempts.
* Fixed bug in acinclude.m4 where capability of compiler
  to handle zero-length arrays in structs is tested
  (David Stipp).
* Fixed typo in manage.c where inline function declaration
  was declared without the "static" keyword (David Stipp).

2005.11.12 -- Version 2.1-beta7

* Allow blank passwords to be passed via the management
  interface.
* Fixed bug where "make check" inside a FreeBSD "jail"
  would never complete (Matthias Andree).
* Fixed bug where --server directive in --dev tap mode
  claimed that it would support subnets of /30 or less
  but actually would only accept /29 or less.
* Extend byte counters to 64 bits (M. van Cuijk).
* PKCS#11 fixes (Alon Bar-Lev).

2005.11.02 -- Version 2.0.5

* Fixed bug in Linux get_default_gateway function
  introduced in 2.0.4, which would cause redirect-gateway
  on Linux clients to fail.
* Moved easy-rsa 2.0 scripts to easy-rsa/2.0 to
  be compatible with 2.0.x distribution.
* Documented --route-nopull.
* Documented --ip-win32 adaptive.
* Windows build now linked with LZO2.
* Allow ca, cert, key, and dh files to be specified
  inline via XML-like syntax without needing to
  reference an explicit file.
  For example:
  <ca>
	data here...
  </ca>
* Allow plugin and push directives to have multi-line
  parameter lists such as:
  <plugin>
    my-plugin.so
    parm1
    parm2
  </plugin>
* Added connect-retry-max option (Alon Bar-Lev).
* Fixed problems where signals thrown during initialization
  were not returning to a management-hold state.
* Added a backtrack-hardened system time algorithm.
* Added --remote-cert-ku, --remote-cert-eku, and
  --remote-cert-tls options for verifying certificate
  attributes (Alon Bar-Lev).
* For Windows, reverted --ip-win32 default back to "dynamic".
  To use new adaptive mode, set explicitly.
	
2005.11.01 -- Version 2.1-beta6
